# collateral_vault-backend

./: .env.example  Cargo.toml  README.md
migrations/: 20260116182519_init.sql
src/: balance_tacker.rs  config.rs  contract.rs  main.rs  vault_manager.rs
src/api/: handlers.rs  mod.rs  routes.rs
src/database/: mod.rs
src/db/: mod.rs
src/models/: database.rs  mod.rs  requests.rs  responses.rs
src/services/: mod.rs  rpc_service.rs  transaction_service.rs  vault_service.rs
src/utils/: anchor_client.rs  error.rs
