[package]
name = "vault-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "1.17"
solana-sdk = "1.17"
anchor-client = "0.29"
anchor-lang = "0.29"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
warp = "0.3"
futures = "0.3"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"